--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "iostream": "cpp",
         "cmath": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/local/cuda-12.6/bin/nvcc"
+    "C_Cpp.default.compilerPath": "/usr/local/cuda-12.6/bin/nvcc",
+    "rainbow_csv.enable_tooltip": true,
+    "editor.formatOnSave": true,
+    "terminal.integrated.cwd": "${fileDirname}"
 }
